2004-10-26  Ronald S. Bultje  <rbultje@ronald.bitfreak.net>

	* mixer/applet.c: (gnome_volume_applet_get_dock_position),
	(gnome_volume_applet_popup_dock):
	  Refactoring.
	(gnome_volume_applet_button):
	  Hide on move (fixes #152855).

2004-10-26  Ronald S. Bultje  <rbultje@ronald.bitfreak.net>

	* mixer/applet.c: (gnome_volume_applet_setup),
	(gnome_volume_applet_popup_dock),
	(gnome_volume_applet_popdown_dock):
	  Behave like a menu (fixes #98355).
	(gnome_volume_applet_toggle_mute),
	(gnome_volume_applet_orientation), (cb_verb), (cb_ui_event):
	  Fix mute behaviour via the menu (fixes #153553).

2004-10-26  Davyd Madeley  <davyd@madeley.id.au>

	* Makefile.am:
	* configure.in: Remove mailcheck, add new null_applet to deprecate
	  mailcheck
	
	A null_applet/*: null_applet: The Applet Deprecation Applet

	R mailcheck/*: The Inbox Monitor, may it Rest In Peace

2004-10-25  Davyd Madeley  <davyd@madeley.id.au>

	* gtik/gnome-money.png
	* gtik/Makefile.am:
	* mailcheck/Makefile.am:
	* mailcheck/gnome-mailcheck.png:
	* modemlights/Makefile.am:
	* modemlights/gnome-modem.png: Move three icons from gnome-desktop
	
	* charpick/charpick.c:
	* gtik/gtik.c:
	* mailcheck/mailcheck.c:
	* mini-commander/src/about.c:
	* mixer/applet.c:
	* modemlights/modemlights.c:
	* multiload/main.c:
	* trashapplet/src/trashapplet.c: Switch to using GtkIconTheme to load
	  pixmaps.

2004-10-19  Michiel Sikkes  <michiel@eyesopened.nl>

	* trashapplet/src/Makefile.am:
	* trashapplet/src/trash-monitor.c:
	* trashapplet/src/trash-monitor.h:
	* trashapplet/src/trashapplet.c:
	* trashapplet/src/trashapplet.h: Added multiple trashdir support by
	James Henstridge. Closes #153283.

2004-10-08  Shaun McCance  <shaunm@gnome.org>

	* stickynotes/stickynotes.c:
	- Use right section for note properties Help (#152476)

2004-10-05  Davyd Madeley  <davyd@madeley.id.au>

	* configure.in: Bump requirements for GTK+ and other core libraries.
	  We now require gtk+-2.5 for icon theming.

	* battstat/Makefile.am: