@@ -1,3 +1,9 @@
+2004-10-27  Ronald S. Bultje  <rbultje@ronald.bitfreak.net>
+
+	* mixer/applet.c: (flip_byte), (flip_pixel), (flip),
+	(gnome_volume_applet_class_init):
+	  Fix icon for RTL environments.
+
 2004-10-26  Ronald S. Bultje  <rbultje@ronald.bitfreak.net>
 
 	* mixer/applet.c: (gnome_volume_applet_get_dock_position),
